# zephyr-note

./: .gitignore  README
01-template/: CMakeLists.txt  Kconfig  README.md  prj.conf
01-template/src/: main.c
02-module/: CMakeLists.txt  Kconfig  README.md  prj.conf
02-module/src/: main.c
03-devicetree/: CMakeLists.txt  Kconfig  app.overlay  prj.conf
03-devicetree/dts/bindings/: miaow,my_device.yaml  vendor-prefixes.txt
03-devicetree/src/: main.c
100-rw612/: CMakeLists.txt  Kconfig  README.md  prj.conf
100-rw612/src/: main.c
98-cpp/: CMakeLists.txt  Kconfig  README.md  app.overlay  prj.conf  xip.ld
98-cpp/include/: 00_ref.h  01_class.h  01_class.hpp  02_static.h  02_static.hpp  03_constructor.h  03_constructor.hpp  04_destructor.h  04_destructor.hpp  05_inherit.h  06_virtual.h  07_pure_virtual.h  08_create_object.h  09_explicit_conversion.h  10_operator_overload.h  11_this.h  12_smart_pointer.h  13_copy_constructor.h  14_arrow_operator.h
98-cpp/src/: 00_ref.cc  00_ref.cpp  01_class.cc  01_class.cpp  02_static.cc  02_static.cpp  03_constructor.cc  03_constructor.cpp  04_destructor.cc  04_destructor.cpp  05_inherit.cc  06_virtual.cc  07_pure_virtual.cc  08_create_object.cc  09_explicit_conversion.cc  10_operator_overload.cc  11_this.cc  12_smart_pointer.cc  13_copy_constructor.cc  14_arrow_operator.cc  main.cc  main.cpp
99-playground/: CMakeLists.txt  Kconfig  README.md
99-playground/src/: main.c
